<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/button_white">

    <TextView
        android:id="@+id/tvTitlePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/filter"
        android:textColor="@color/color_grey"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAddItemMdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitlePopup">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_pink"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/rb_unselected"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/color_pink"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clAddItemMdr" />

</androidx.constraintlayout.widget.ConstraintLayout>